I changed a keyword in the api

--- a/Notebook/Credit_Card_Fraud_Detection.ipynb
+++ b/Notebook/Credit_Card_Fraud_Detection.ipynb
@@ -2896,7 +2896,7 @@
         "                'new_balance_dest': newbalancedest,\n",
         "                'is_flagged_fraud': isflaggedfraud}\n",
         "\n",
-        "    res = re.post(f\"https://credit-card-pred-api.herokuapp.com/predict\",json=values)\n",
+        "    res = re.post(f\"https://credit-fraud-pred-api.herokuapp.com/predict\",json=values)\n",
         "    json_str = json.dumps(res.json())\n",
         "    resp = json.loads(json_str)\n",
         "    st.write(f\"The transaction that took place between{} and {} is {resp[0]}\")\n",
